# lab2

./: CMakeLists.txt
PRIORETY/: CMakeLists.txt  main.cpp  priorety.h
SKIPLIST/: CMakeLists.txt  main.cpp  skiplist.h
TEST/: test.cpp
